@@ -1,5 +1,14 @@
 2011-01-09  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
+	* include/dmcs/StreamingDMCS.h: Use ConcurrentMessageQueue thingy.
+	* src/solver/RelSatSolver.cpp: Likewise.
+	* src/network/ThreadFactory.cpp: Likewise.
+	* src/dmcs/StreamingDMCS.cpp: Likewise.
+	* include/solver/RelSatSolver.h: Likewise.
+	* include/network/Handler.tcc: Likewise.
+	* include/network/Handler.h: Likewise.
+	* include/network/ConcurrentMessageQueueFactory.h: Likewise.
+
 	* include/solver/SatSolverFactory.h: Use local_sig instead of mixed_sig.
 	* src/dmcs/StreamingDMCS.cpp: Likewise.
 
